# proto-game-engine

./: README.md
vlge-cpp-202309-a/: CMakeLists.txt
vlge-cpp-202309-a/vlge-cpp-202309-a/: CMakeLists.txt  transform.h  vlge-cpp-202309-a.cpp  vlge-cpp-202309-a.h
vlge-cpp-202309-b/: vlge-cpp-202309-b.sln
vlge-cpp-202309-b/game/src/: raylib_game.c  screens.h
vlge-cpp-202309-c/: CMakeLists.txt
vlge-cpp-202309-c/vlge-cpp-202309-c/: CMakeLists.txt  vlge-cpp-202309-c.cpp  vlge-cpp-202309-c.h
vlge-cpp-202309-d/: CMakeLists.txt
vlge-cpp-202309-d/doc/: README.md  license-apache2.md
vlge-cpp-202309-d/vlge-cpp-202309-d/: AppProgram.cpp  CMakeLists.txt  GameProgram.cpp  LauncherProgram.cpp  README.md  app.cpp  core_basic_window.cpp  game.cpp  helper.cpp  launcher.cpp  main.cpp  vlge-cpp-202309-d.cpp  vlge-cpp-202309-d.h
vlge-cpp-202309-d/vlge-cpp-202309-d/Abstract/: ABSAppProgram.h  ABSArgumentException.h  ABSGameProgram.h  ABSLauncherProgram.h  ABSLogger.h  ABSLoggerConsole.h  ABSLoggerImguiConsole.h  ABSNetwork.h
vlge-cpp-202309-d/vlge-cpp-202309-d/AppEngine/: AEInput.h  AELogger.h
vlge-cpp-202309-d/vlge-cpp-202309-d/AppProgram/: AppProgram.h  AppProgramConfig.h  AppProgramExample.h
vlge-cpp-202309-d/vlge-cpp-202309-d/ArgumentException/: ArgumentException.h  ArgumentExceptionConsole.h
vlge-cpp-202309-d/vlge-cpp-202309-d/Constant/: KExitCode.h  KFpsTarget.h  KFullscreenMode.h  KLocalization.h  KScreenOrientation.h  KScreenResolution.h
vlge-cpp-202309-d/vlge-cpp-202309-d/GameEngine/: GELogger.h  GELoggerConsole.h  GELoggerImguiConsole.h  GERandom.h  GETransform.h  GEVector3.h
vlge-cpp-202309-d/vlge-cpp-202309-d/GameProgram/: GPAudioManager.h  GPGuiManager.h  GameProgramConfig.h  GameProgramData.h  GameProgramExample.cpp  GameProgramExample.h
vlge-cpp-202309-d/vlge-cpp-202309-d/GameProgram-Abstract/: ABSGameProgram.h
vlge-cpp-202309-d/vlge-cpp-202309-d/GameProgram-Component/: CameraComponent.h  TransformComponent.h
vlge-cpp-202309-d/vlge-cpp-202309-d/Implement/: IMPLLogger.h
vlge-cpp-202309-d/vlge-cpp-202309-d/Program/: PROGLoggerConsole.h  PROGLoggerImguiConsole.h
vlge-cpp-202309-d/vlge-cpp-202309-d/ProgramEngine/: AudioManager.h  ENGINENetwork.h  ENGINEProgram.cpp  ENGINEProgram.h  ENGINEProgramConfig.h  ENGINEProgramGui.h  KRefreshRate.h  LoggerConsole.h  PROGImgui.h  PROGLoggerConsole.h  PROGRAMNetwork.h  PROGRandom.h  Quaternion.h  Random.h  Vector3.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/engine/: Program.cpp  Program.h  ProgramConfig.h  ProgramEditor.cpp  ProgramEditor.h  ProgramGlfw.h  ProgramLogger.h  ProgramNetwork.cpp  ProgramProcessor.cpp  ProgramProcessor.h  ProgramRaylib.cpp  ProgramRender.cpp  ProgramRender.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ae/: Input.h  KGuiAnchor.h  KInput.h  KProgramExitCode.h  LoggerConsole.h  LoggerImguiConsole.h  Profiler.h  Vector3Int.h  Vector4.h  Vector4Int.h  WrapperImgui.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ge/: AiNavigation.h  AudioPlayer.h  Color.h  GameProgramObject.h  GuiPage.h  GuiText.h  README.md  RenderLayer.h  RenderSorting.h  Rigidbody.h  Spline.h  TagLayerGroup.h  VideoPlayer.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ge-extra/: README.md
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ge-gui-extra/: GuiPage.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ge-user/: GameModeDefault.h  GameModeManager.h  GameProgramManager.h  InputManager.h  README.md  ResourceManager.h  SceneManager.h  TimeManager.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ge-user/gui/: GuiPage_MainMenu.cpp  GuiPage_MainMenu.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ge-user/scene/: Scene_MainMenu.h  Scene_TitleScreen.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ge/gui/: GuiButton.h  GuiDropdown.h  GuiTransform.h
vlge-cpp-202309-d/vlge-cpp-202309-d/internal/include/ge/physic/: PhysicCollision.h
vlge-cpp-202310-e/: CMakeLists.txt
vlge-cpp-202310-e/vlge-cpp-202310-e/: CMakeLists.txt  archive.txt  main.cpp  mainrmlui.cpp  vlge-cpp-202310-e.cpp  vlge-cpp-202310-e.h
vlge-cpp-202310-e/vlge-cpp-202310-e/internal/engine/: Program.cpp  Program.h  ProgramAudio.cpp  ProgramAudio.h  ProgramConfig.h  ProgramEditor.cpp  ProgramEditor.h  ProgramGlfw.cpp  ProgramNetwork.h  ProgramProcessor.h  ProgramRaylib.h  ProgramRender.cpp  ProgramRender.h  ProgramSdl.cpp  ProgramSdl.h
vlge-cpp-202310-e/vlge-cpp-202310-e/internal/include/ae/: KArgumentException.h  KScreenResolution.h  LoggerRmluiConsole.h  Quaternion.h  README.md
vlge-cpp-202310-e/vlge-cpp-202310-e/internal/include/ge/: AudioMixer.h  Camera.h  Color.h  ParticleSystem.h  Scene.h  Texture.h  Transform.h
vlge-cpp-202310-e/vlge-cpp-202310-e/internal/include/ge-extra/: WrapperInk.h
vlge-cpp-202310-e/vlge-cpp-202310-e/internal/include/ge-user/: AdMonetizationManager.h  AudioManager.h  GuiManager.h  InputManager.h  ProcessorManager.h  SceneManager.h
vlge-cpp-202310-e/vlge-cpp-202310-e/internal/include/ge-user/gui/: GuiPage_MainMenu.h
vlge-cpp-202310-e/vlge-cpp-202310-e/internal/include/ge-user/scene/: Scene_MainMenu.cpp  Scene_TitleScreen.cpp
vlge-cpp-202310-e/vlge-cpp-202310-e/internal/include/ge/gui/: GuiText.h
vlge-csharp-202309-a/: vlge-csharp-202309-a.sln
vlge-csharp-202309-a/vlge-csharp-202309-a/: PROGRAMDearImgui.cs  PROGRAMProgramMain.cs  PROGRAMRaylib.cs  Program.cs  ProgramSetting.cs  vlge-csharp-202309-a.csproj
vlge-csharp-202309-a/vlge-csharp-202309-a/AppProgram/: AppProgramData.cs  AppProgramDearImgui.cs  AppProgramMain.cs  AppProgramRaylib.cs
vlge-csharp-202309-a/vlge-csharp-202309-a/GameProgram/: GameApi.cs
